# Quad_Sim-Murray-Louw

./: havok_model_custom_log_09_06_26.csv_q30_p3.mat  havok_model_custom_log_17_21_15.csv_q10_p10.mat  initialize_quad_gains_griffin.m  initialize_quad_models_controllers.m  initialize_quad_parameters_griffin.m  initialize_quad_sim_constants.m  initialize_quad_simulation.m  mpc_payload.tgz  quad_simulation_with_payload.slx  quad_simulation_with_payload.slx.r2021a  shared_config.sldd  untitled.slx.autosave
ROS/: PID_test.slx  add_ros_messages.m  initialise_iris_gains.m  initialise_ros_iris_payload.m  initialize_mpc_iris_no_load.m  initialize_mpc_iris_payload.m  mpc_no_load.slx  mpc_no_load_R2020a.slx  mpc_payload.slx  plot_CPU_and_RAM.m  plot_HITL.m  plot_match_mpc_vs_pid.m  publish_pos_setpoints.slx  publish_setpoint_raw.slx  publish_vector3.slx  robotROSGetStartedExample_edit.slx  ros_init_callback.m  simulink_ros_controller.slx  simulink_ros_controller.slx.original
Test/: compare_model_prediction.m  convert_waypoints_for_ros_node.m  local_to_global_sitl_conversion.m  random_vel_test.m  run_model.m  run_model_prediction.m  test_pre_gen_traj_simulink.m  trajectory_gen_test.slx
compare_to_SITL/: SITL_vs_Simulink_training.m  logs  plot_flight_data.m  plot_matlab.m  plot_sitl.m  plot_ulog_vs_logger_node_data.m  print_new_gains.m
control_bootcamp_code/: cartpend.m  linearize_cartpend.m  lqr_cartpend.m
controller_design/: lin_vel_down_design.slx  lin_vel_east_design.slx  lin_vel_north_design.slx  pitch_angle_design_step.slx  pitch_rate_design_step.slx  position_down_design.slx  position_east_design.slx  position_north_design.slx  roll_angle_design_step.slx  roll_rate_design_step.slx  rootlocus.m  thrust_model.slxc  yaw_angle_design_step.slx  yaw_rate_design_step.slx
data/: havok_results_Steps_XZ_1_sig=0.mat  save_data.m
functions/: add_delay_coordinates.m  convert_waypoints_for_ros_node.m  random_vel_setpoints.m  random_waypoints.m  reference_trajectory.m  stabilise.m  step_by_step_mpc.m  test_GenTraj.m
initialise/: initialize_inputs.m  initialize_quad_gains_griffin.m  initialize_step.m
initialize/: initialise_without_simulink.m  initialize_controller_inputs.m  initialize_lqr_honeybee.m  initialize_mpc.m  initialize_mpc_honeybee.m  initialize_quad_gains_griffin.m  initialize_quad_gains_honeybee_reg.m  initialize_quad_models_controllers.m  initialize_quad_parameters_griffin.m  initialize_quad_parameters_honeybee_reg.m  initialize_quad_simulation.m  initialize_step.m  tune_mpc.m
modelling/: derive_discrete_cartpend_equations.m  derive_drone_2D_with_load_equations.m  discretize_ODE.m
plots/: FFT_to_csv.m  MAE_vs_Ntrain.m  MAE_vs_Ts.m  MAE_vs_q.m  Singular_values.m  acc_sp_to_csv.m  estimated_length_vs_train_length.m  mpc_vs_lqr_vs_pid_to_csv.m  plot_prediction_from_run_model.m  pos_step_to_csv.m  prac_vel_step_to_csv.m  prac_vel_step_with_load_to_csv.m  prac_vs_sim_vel_step.m  prac_vs_sim_vel_step_with_load.m  rootlocus_to_csv.m  single_step_prediction.m  step_by_step_mpc_to_csv.m  train_data_to_csv.m  vel_step_to_csv.m
practical_flights/: extract_flight_data.m  logger_topics.txt
quad_models/: MPC_block.slx  aerodynamic_model.slx  controller_angular_rate_pitch.slx  controller_angular_rate_roll.slx  controller_angular_rate_yaw.slx  controller_angular_rates.slx  controller_attitude.slx  controller_attitude_pitch.slx  controller_attitude_roll.slx  controller_attitude_yaw.slx  controller_position.slx  controller_position_down.slx  controller_position_east.slx  controller_position_north.slx  controller_velocity.slx  controller_velocity.slx.original  controller_velocity_LQR.slx  controller_velocity_MPC.slx  controller_velocity_down.slx  controller_velocity_east.slx  (+22 more)
simCodeGen/install/share/robotrosgetstartedexample_edit/: package.xml
simCodeGen/install/share/robotrosgetstartedexample_edit/cmake/: robotrosgetstartedexample_editConfig.cmake
simCodeGen/src/robotrosgetstartedexample_edit/: CMakeLists.txt  packageInfo.mat
simCodeGen/src/robotrosgetstartedexample_edit/include/robotrosgetstartedexample_edit/: robotROSGetStartedExample_edit_types.h  rosnodeinterface.h  rtwtypes.h  slros_busmsg_conversion.h  slros_initialize.h  visibility_control.h
simCodeGen/src/robotrosgetstartedexample_edit/src/: robotROSGetStartedExample_edit.cpp  rosnodeinterface.cpp  slros_busmsg_conversion.cpp
(+794 files in other folders)
